force-app/main/default/objects/Project__c/fields/Comment_on_Why_Emerging_Work__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_Why_Emerging_Work__c</fullName>
    <label>Comment on Why Emerging Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>