force-app/main/default/objects/Project__c/fields/Is_Emerging_Work__c.field-meta.xml
<CustomField>
    <fullName>Is_Emerging_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Emerging Work?</label>
    <type>Checkbox</type>
</CustomField>