force-app/main/default/objects/Project__c/fields/Primary_Objective__c.field-meta.xml
<CustomField>
    <fullName>Primary_Objective__c</fullName>
    <label>Primary Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Risk Reduction</fullName>
            </value>
            <value>
                <fullName>Production Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>