force-app/main/default/objects/Project__c/fields/Risk_Reduction_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reduction_Benefit__c</fullName>
    <label>Risk Reduction Benefit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>